# gitlabctl

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
src/: ci_parser.rs  common.rs  gen.rs  gitlab.rs  gitlab_types.rs  handler.rs  main.rs  writer.rs  yaml.rs
src/commands/: delete_pipelines.rs  generate_bash_scripts.rs  generate_ci_scripts.rs  generate_git_scripts.rs  mod.rs  show_pipelines.rs
templates/: clone.sh  pull.sh  scripts.sh  status.sh
templates/ci/: env.example.sh  job.sh  matrix.sh
templates/git/: clone-recursive.sh  clone.sh  pull-recursive.sh  pull.sh  scripts.sh  status.sh
templates/git/macros/: git_script.sh  git_script_recursive.sh  git_script_repo.sh  git_script_repo_recursive.sh
templates/macros/: git_script.sh
