[package]
name = "gitlabctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gitlab = "0.1601.0"
serde = "1.0.166"
serde_yaml = "0.9.22"
log = "0.4.19"
thiserror = "1.0.41"
clap = { version = "4.3.17", features = ["derive"] }
