[package]
name = "gitlabctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = {version = "*", features = ["full"]}
gitlab = "*"
serde = "*"
serde_yaml = "*"
log = "*"
thiserror = "*"
clap = { version = "*", features = ["derive"] }
tera = { version = "*", default-features = false }
lazy_static = "*"
env_logger = "*"
