[package]
name = "gitlabctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = {version = "*", features = ["full"]}
gitlab = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
log = "*"
thiserror = "*"
clap = { version = "*", features = ["derive"] }
tera = { version = "*", default-features = false }
lazy_static = "*"
env_logger = "*"
resolve-path = "*"
serde_with = "3.8.1"
walkdir = "2.5.0"
include_dir = "0.7.4"
indexmap = { version = "2.4", features = ["serde"] }
